# dovecot-bcrypt-plugin

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  bcrypt-plugin.c  crypt_blowfish.c  crypt_blowfish.h
